--- a/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
@@ -497,7 +497,7 @@
 
 "ExportConfirmation.cancel" = "Afbestille";
 
-"ExportConfirmation.continue" = "Blive ved";
+"ExportConfirmation.continueAction" = "Blive ved";
 
 "ExportConfirmation.message" = "Dette genererer en CSV-fil, der inkluderer alle gennemførte transaktioner fra alle aktiverede tegnebøger.";
 
