--- a/brd-ios/breadwallet/src/Strings/fr.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/fr.lproj/Localizable.strings
@@ -497,7 +497,7 @@
 
 "ExportConfirmation.cancel" = "Annuler";
 
-"ExportConfirmation.continue" = "Continuez";
+"ExportConfirmation.continueAction" = "Continuez";
 
 "ExportConfirmation.message" = "Cela générera un fichier CSV comprenant toutes les transactions terminées à partir de tous les portefeuilles activés.";
 
